<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".AddExpensesActivity">
   <!-- Add expense activity layout-->

    <EditText
        android:id="@+id/titleInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Expense Title"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/amountInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Amount"
        android:inputType="numberDecimal"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/dateInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Date (dd/MM/yyyy)"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/categoryInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Category"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/submitExpenseButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Submit Expense"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/backButtonAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Back to Main Menu"/>

</LinearLayout>



