<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <!-- Main activity layout has all the buttons for main screen-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:title="App Menu"
            app:titleTextColor="#FFFFFF"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_below="@id/toolbar">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Budget Tracking App"
                android:textSize="24sp"
                android:layout_marginBottom="24dp" />

            <Button
                android:id="@+id/addExpensesButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Add Expenses On List"
                android:backgroundTint="#673AB7"
                android:textColor="#FFFFFF"
                android:layout_marginBottom="16dp" />

            <Button
                android:id="@+id/showExpensesButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Show Expenses On List"
                android:backgroundTint="#673AB7"
                android:textColor="#FFFFFF"
                android:layout_marginBottom="16dp" />

            <Button
                android:id="@+id/editExpensesButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Edit Expenses On List"
                android:backgroundTint="#673AB7"
                android:textColor="#FFFFFF"
                android:layout_marginBottom="16dp" />

            <Button
                android:id="@+id/showStatisticsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Show Statistics On List"
                android:backgroundTint="#673AB7"
                android:textColor="#FFFFFF"
                android:layout_marginBottom="16dp" />

        </LinearLayout>
    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:itemTextColor="@android:color/black"
        app:itemIconTint="@android:color/black"
        app:menu="@menu/drawer_menu" />
</androidx.drawerlayout.widget.DrawerLayout>

