...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">
    <!-- edit expense activity layout file-->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/editExpensesRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/saveButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
        android:text="Save"
        app:layout_constraintBottom_toTopOf="@id/backButtonEdit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
   <!-- Delete all button -->
    <Button
        android:id="@+id/deleteAllButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Delete All"
        app:layout_constraintBottom_toTopOf="@id/saveButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
